name:                WiTViewer
version:             0.1.0.0
synopsis:            Waveform in Text
description:         Draw digital waveform using ASCII art
homepage:            http://github.com/nma83/WiTViewer#readme
license:             GPL
license-file:        LICENSE
author:              Narendra M
maintainer:          nma83@github.com
copyright:           2016 Narendra M
category:            Terminal, Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable WiTViewer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brick >= 0.4.1
                     , lens >= 4.13
                     , vty >= 5.4
                     , vector >= 0.11
                     , WiTViewer
  default-language:    Haskell2010

test-suite WiTViewer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , WiTViewer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/WiTViewer
